src/Base/main/default/objects/Insurance_Rate__c/Insurance_Rate__c.object-meta.xml
<CustomObject>
    <label>Insurance Rate</label>
    <nameField>
        <displayFormat>IR-{0000}</displayFormat>
        <label>Insurance Rate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insurance Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>