src/Base/main/default/objects/Insurance_Rate__c/fields/Joint_Factor__c.field-meta.xml
<CustomField>
    <fullName>Joint_Factor__c</fullName>
    <label>Joint Factor</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>