src/Base/main/default/objects/Insurance_Rate__c/fields/Joint_Factored_Result__c.field-meta.xml
<CustomField>
    <fullName>Joint_Factored_Result__c</fullName>
    <formula>Single__c * Joint_Factor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Joint Factored Result</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>