src/Base/main/default/objects/Insurance_Rate__c/fields/Lower_Term__c.field-meta.xml
<CustomField>
    <fullName>Lower_Term__c</fullName>
    <label>Lower Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>