src/Base/main/default/objects/Insurance_Rate__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Insurance Rates</relationshipLabel>
    <relationshipName>Insurance_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>