src/Base/main/default/objects/Insurance_Rate__c/fields/Single_Joint_String__c.field-meta.xml
<CustomField>
    <fullName>Single_Joint_String__c</fullName>
    <formula>TEXT( Single__c ) + &apos; / &apos; + TEXT( Joint__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Single / Joint</label>
    <type>Text</type>
</CustomField>