src/Base/main/default/objects/Insurance_Rate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Lower_Term__c</columns>
    <columns>Upper_Term__c</columns>
    <columns>Joint__c</columns>
    <columns>Single__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>