src/Base/main/default/objects/Insurance_Rate__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Tax_Zone__c</columns>
    <columns>Single_Joint_String__c</columns>
    <columns>Term_Range__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>